--- a/portfolio/Base/templates/home.html
+++ b/portfolio/Base/templates/home.html
@@ -37,9 +37,9 @@
     <section id="home" class="flex s-around sw-80 m-auto">
         <div class="home-left flex items-center">
             <div class="home-content">
-                <h6 class="poppinss">Hi, I'm</h6>
-                <h1 class="t-white">Avanish Patidar</h1>
-                <h4 class="poppinss">Software Engineer</h4>
+                <h6 class="poppinss">Hy, I'm</h6>
+                <h1 class="t-white">Hyma Chintala</h1>
+                <h4 class="poppinss">Undergraduate</h4>
                 <a href="{% static 'pdf/django.pdf' %}"  target="_blank">
                     <button class="btn poppins">Resume</button></a>
                     
@@ -199,3 +199,4 @@
      
 </body> 
 </html>
+
